k8s_base/base/argocd/argocd_gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd0
spec:
  hosts:
  - argocd0.nuts.yantao0527.me
  gateways:
  - argocd0-gateway
  http:
  - route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port: 
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: argocd0-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http2
      protocol: HTTP2
    hosts:
    - argocd0.nuts.yantao0527.me
  - port:
      number: 443
      name: https-tls
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: argocd-tls
    hosts:
    - argocd0.nuts.yantao0527.me
---
